Add 'left panel' config option
Now it is possible to change the panel side to the left

--- a/styles/nav-panel.less
+++ b/styles/nav-panel.less
@@ -55,6 +55,14 @@ atom-text-editor::shadow div.line-number.zi-highlight {
 	cursor: col-resize;
 	z-index: 5;
 }
+
+.zi-width-resizer.left {
+	left: 0;
+}
+.zi-width-resizer.right {
+	right: 0;
+}
+
 .zi-header>h2 {
   margin-left: 10px;
 }
