Add a settings gear to panel

--- a/styles/nav-panel.less
+++ b/styles/nav-panel.less
@@ -64,7 +64,7 @@ atom-text-editor::shadow div.line-number.zi-highlight {
 	top: 0;
 	bottom: 0;
 	width: 6px;
-	cursor: col-resize;
+	cursor: ew-resize;
 	z-index: 5;
 }
 
@@ -75,18 +75,11 @@ atom-text-editor::shadow div.line-number.zi-highlight {
 	right: 0;
 }
 
-.zi-header>h2 {
-  margin-left: 10px;
-}
-.zi-header>.sorter {
-  float: right;
-  width: 18px;
-  padding-left: 2px;
-  border: gray solid 2px;
-  position: relative;
-  right: 10px;
+.zi-header>.icon {
+	float: right;
+	width: 18px;
+	position: relative;
+  right: 5px;
+	top: 5px;
 	cursor: pointer;
-}
-.zi-header>.icon.toggled {
-  border-width: 3px 2px 1px 2px;
 }
